--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@ org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.workers.max=8
+targets=all
