--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,7 @@ permissions:
   contents: read # Default top-level permission
 
 on:
-  push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build-apple:
