--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-apple:
+  deploy:
     runs-on: macos-latest
     environment: Maven Central
 
@@ -29,7 +29,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v5
 
       - name: Setup Rust & cargo
-        run: rustup target add aarch64-apple-ios aarch64-apple-darwin x86_64-apple-darwin
+        run: rustup target add aarch64-apple-ios aarch64-apple-darwin x86_64-apple-darwin aarch64-apple-ios-sim aarch64-linux-android x86_64-linux-android aarch64-unknown-linux-gnu x86_64-unknown-linux-gnu x86_64-pc-windows-gnu
 
       - name: Setup Cache
         uses: actions/cache@v4
