--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,16 @@ jobs:
         uses: gradle/actions/setup-gradle@v5
 
       - name: Setup Rust & cargo
-        run: rustup target add aarch64-apple-ios aarch64-apple-darwin x86_64-apple-darwin aarch64-apple-ios-sim aarch64-linux-android x86_64-linux-android aarch64-unknown-linux-gnu x86_64-unknown-linux-gnu x86_64-pc-windows-gnu
+        run: |
+          rustup target add aarch64-apple-ios
+          rustup target add aarch64-apple-ios-sim
+          rustup target add x86_64-linux-android
+          rustup target add aarch64-linux-android
+          rustup target add aarch64-apple-darwin
+          rustup target add x86_64-apple-darwin
+          rustup target add aarch64-unknown-linux-gnu
+          rustup target add x86_64-unknown-linux-gnu
+          rustup target add x86_64-pc-windows-gnu
 
       - name: Setup Cache
         uses: actions/cache@v4
@@ -51,5 +60,8 @@ jobs:
         # The GITHUB_TOKEN is automatically provided by GitHub Actions
         # and gets its permissions from the 'permissions' block above.
 
+      - name: Set dynamic version
+        run: sed -i '' 's/version = "[^"]*"/version = "1.5.${{ github.run_id }}"/' build.gradle.kts
+
       - name: Gradle Build
-        run: ./gradlew publishAllPublicationsToGithubRepository
+        run: ./gradlew publishAllPublicationsToGithubRepository -Ptargets=all
