--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,12 @@ jobs:
           rustup target add x86_64-unknown-linux-gnu
           rustup target add x86_64-pc-windows-gnu
 
+      - name: Setup Android NDK
+        uses: nttld/setup-ndk@v1
+        id: setup-ndk
+        with:
+          ndk-version: r27  # Using a stable NDK version
+
       - name: Setup Cache
         uses: actions/cache@v4
         with:
