--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,11 +63,11 @@ jobs:
           echo "signingInMemoryKeyId=${{ secrets.SIGNINGINMEMORYKEYID }}" >> local.properties
           echo "signingInMemoryKeyPassword=${{ secrets.SIGNINGINMEMORYKEYPASSWORD }}" >> local.properties
           echo "signingInMemoryKey=${{ secrets.SIGNINGINMEMORYKEY }}" >> local.properties
-        # The GITHUB_TOKEN is automatically provided by GitHub Actions
-        # and gets its permissions from the 'permissions' block above.
 
       - name: Set dynamic version
         run: sed -i '' 's/version = "[^"]*"/version = "1.5.${{ github.run_id }}"/' build.gradle.kts
 
       - name: Gradle Build
         run: ./gradlew publishAllPublicationsToGithubRepository -Ptargets=all
+        env:
+          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
