--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
         with:
           ndk-version: r27  # Using a stable NDK version
 
+      - name: Install cargo-ndk
+        run: cargo install cargo-ndk
+
       - name: Setup Cache
         uses: actions/cache@v4
         with:
