--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,11 @@ jobs:
       - name: Install cargo-ndk
         run: cargo install cargo-ndk
 
+      - name: Setup Linux Cross-Compilers (via Homebrew)
+        run: |
+          brew tap messense/macos-cross-toolchains
+          brew install aarch64-unknown-linux-gnu x86_64-unknown-linux-gnu
+
       - name: Setup Cache
         uses: actions/cache@v4
         with:
