--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Install cargo-ndk
         run: cargo install cargo-ndk
 
+      - name: Install MinGW-w64
+        run: brew install mingw-w64
+
       - name: Setup Linux Cross-Compilers (via Homebrew)
         run: |
           brew tap messense/macos-cross-toolchains
