--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,17 @@ jobs:
       - name: Checkout Project
         uses: actions/checkout@v5
 
+      - name: Create local.properties
+        run: |
+          echo "githubActor=${{ github.actor }}" > local.properties
+          echo "githubToken=${{ secrets.GITHUB_TOKEN }}" >> local.properties
+          echo "signingInMemoryKeyId=${{ secrets.SIGNINGINMEMORYKEYID }}" >> local.properties
+          echo "signingInMemoryKeyPassword=${{ secrets.SIGNINGINMEMORYKEYPASSWORD }}" >> local.properties
+          echo "signingInMemoryKey=${{ secrets.SIGNINGINMEMORYKEY }}" >> local.properties
+
+      - name: Set dynamic version
+        run: sed -i '' 's/version = "[^"]*"/version = "1.6.${{ github.run_number }}"/' build.gradle.kts
+
       - name: Setup Java
         uses: actions/setup-java@v5
         with:
@@ -54,21 +65,14 @@ jobs:
           rustup target add aarch64-apple-darwin
           rustup target add x86_64-apple-darwin
 
-      - name: Setup Android NDK
-        uses: nttld/setup-ndk@v1
-        id: setup-ndk
-        with:
-          ndk-version: r27  # Using a stable NDK version
-          local-cache: true
+      - name: Gradle Build
+        run: ./gradlew publishAllPublicationsToGithubRepository -Ptargets=apple
 
-      - name: Install cargo-ndk (with cache)
-        uses: taiki-e/cache-cargo-install-action@v2
-        with:
-          tool: cargo-ndk
-
-      - name: Install MinGW-w64
-        run: brew install mingw-w64
-
+  build-non-apple:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Project
+        uses: actions/checkout@v5
 
       - name: Create local.properties
         run: |
@@ -81,14 +85,6 @@ jobs:
       - name: Set dynamic version
         run: sed -i '' 's/version = "[^"]*"/version = "1.6.${{ github.run_number }}"/' build.gradle.kts
 
-      - name: Gradle Build
-        run: ./gradlew publishAllPublicationsToGithubRepository -Ptargets=apple
-
-  build-rest:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Project
-        uses: actions/checkout@v5
 
       - name: Setup Java
         uses: actions/setup-java@v5
@@ -146,16 +142,6 @@ jobs:
           g++-aarch64-linux-gnu \
           mingw-w64
 
-      - name: Create local.properties
-        run: |
-          echo "githubActor=${{ github.actor }}" > local.properties
-          echo "githubToken=${{ secrets.GITHUB_TOKEN }}" >> local.properties
-          echo "signingInMemoryKeyId=${{ secrets.SIGNINGINMEMORYKEYID }}" >> local.properties
-          echo "signingInMemoryKeyPassword=${{ secrets.SIGNINGINMEMORYKEYPASSWORD }}" >> local.properties
-          echo "signingInMemoryKey=${{ secrets.SIGNINGINMEMORYKEY }}" >> local.properties
-
-      - name: Set dynamic version
-        run: sed -i '' 's/version = "[^"]*"/version = "1.6.${{ github.run_number }}"/' build.gradle.kts
 
       - name: Gradle Build
         run: ./gradlew publishAllPublicationsToGithubRepository -Ptargets=non-apple
