--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set dynamic version
         run: |
           ls -l
-          sed -i 's/version = "[^"]*"/version = "1.6.${{ github.run_number }}"/' build.gradle.kts
+          sed -i '' 's/version = "[^"]*"/version = "1.6.${{ github.run_number }}"/' build.gradle.kts
 
       - name: Create local.properties
         run: |
