hopefully fix apple ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,11 +68,7 @@ jobs:
       - name: Gradle Build
         run: |
           ./gradlew \
-          sqlx4k:publishAllPublicationsToGithubRepository \
-          sqlx4k-mysql:publishAllPublicationsToGithubRepository \
-          sqlx4k-postgres:publishAllPublicationsToGithubRepository \
-          sqlx4k-postgres-pgmq:publishAllPublicationsToGithubRepository \
-          sqlx4k-sqlite:publishAllPublicationsToGithubRepository \
+          publishAllPublicationsToGithubRepository \
           -Ptargets=apple
 
   build-non-apple:
