--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,6 +112,11 @@ jobs:
             /home/runner/.konan
           key: general-lib-cache
 
+      - name: Install Rust Toolchain
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
         with:
