--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
       packages: write
     steps:
       - name: Maximize build space
-        uses: easimon/maximize-build-space-action@master
+        uses: easimon/maximize-build-space@v10
         with:
           remove-docker-images: true
           remove-dotnet: true
